[package]
name = "sys-audio-filter"
version = "0.1.0"
authors = ["Anton Kriese (WSL2) <anton.kriese@fu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psimple = { version = "2.23.0", package = "libpulse-simple-binding" }
pulse = { version = "2.23.0", package = "libpulse-binding" }



