[package]
name = "sys-audio-filter"
version = "0.1.0"
authors = ["Anton Kriese (WSL2) <anton.kriese@fu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
ctrlc = "3.1.9"
biquad = "0.4.1"
rodio = "0.13.1"
cpal = "0.13.3"
rustfft = "6.0.1"
tui = "0.15.0"

[target.'cfg(unix)'.dependencies]
psimple = { version = "2.23.0", package = "libpulse-simple-binding" }
pulse = { version = "2.23.0", package = "libpulse-binding" }
